<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_finale"
    app:circularflow_radiusInDP="14dp"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/TextViewCreateAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/signika_bold"

            android:gravity="center"

            android:text="@string/creer_un_nouveau_compte"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextViewLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewCreateAcc"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/nom_et_pr_nom"

            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_person"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edit_text_style"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextViewLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewLayoutName"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/e_mail"

            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edit_text_style"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextViewLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewLayoutEmail"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/mot_de_passe"

            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edit_text_style"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextViewLayoutPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewLayoutPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/numero_de_t_l_phone"
            app:boxBackgroundColor="@color/blue"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/white"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:prefixText="+212 "
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edit_text_style"
                android:textColor="@color/black"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/TextViewChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewLayoutPhone"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:text="@string/choisir_les_sports"

            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/sportChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewChoices"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/NatationCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/natation"
                android:buttonTint="@color/blue"
                />

            <CheckBox
                android:id="@+id/TennisCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/tennis"
                android:buttonTint="@color/blue"/>

            <CheckBox
                android:id="@+id/FootCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/foot_ball"
                android:buttonTint="@color/blue"/>


        </LinearLayout>


        <Button
            android:id="@+id/BtnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportChoices"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/s_identifier"
            android:textColor="@color/white"
            android:fontFamily="@font/signika_bold"
            />

        <LinearLayout
            android:id="@+id/askLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BtnSignup"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="20dp"

            >

            <TextView
                android:id="@+id/TextViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_tu_deja_un_compte"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/signika_bold"
                android:text="@string/se_connecter"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
