<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="14dp"
    android:background="@drawable/background_finale"
    tools:context=".AccountActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:layout_marginTop="10dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingStart="8dp"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bienvenue"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:layout_below="@id/tvDateTime"

                    />



            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="gone"
            android:layout_below="@id/navbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tennistable"
                    android:contentDescription="@string/tennis_timetable"
                    />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tennis"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btndownload"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/imageView1"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/download"
                    android:src="@drawable/ic_action_name" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_below="@id/card1"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/swimmingtable"
                    android:contentDescription="@string/tennis_timetable"
                    />

                <TextView
                    android:id="@+id/tvDescription2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/natation"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>


                <Button
                    android:id="@+id/btndownload2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/download"
                    android:src="@drawable/ic_action_name" />


            </RelativeLayout>




        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/card2"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/footballtable"
                    android:contentDescription="@string/football_timetable"
                    />

                <TextView
                    android:id="@+id/tvDescription3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView3"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:text="@string/foot_ball"
                    android:textColor="@color/black"/>


                <Button
                    android:id="@+id/btndownload3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/imageView3"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/download"
                    />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>